<resources>
    <string name="app_name">My Application</string>
    <string name="distance">Distância</string>
    <string name="total_quilometre">Total de quilômetro</string>
    <string name="price">Preço</string>
    <string name="price_per_litre">Preço por Litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_litre">KMs por Litro</string>
    <string name="total_spent">"O total gasto foi de: "</string>
    <string name="calculate">CALCULAR</string>
</resources>